--- a/helm/githubwatcher/templates/deployment.yaml
+++ b/helm/githubwatcher/templates/deployment.yaml
@@ -33,6 +33,12 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+          - name: "REDIS_HOST"
+            value: {{ .Values.redisHost }}
+          - name: "REDIS_PORT"
+            value: {{ .Values.redisPort | quote }}
+          - name: "CHECK_PERIOD"
+            value: {{ .Values.checkPeriod | quote }}
           - name: "GITHUB_USER"
             valueFrom:
               secretKeyRef:
