--- a/helm/githubwatcher/values.yaml
+++ b/helm/githubwatcher/values.yaml
@@ -1,12 +1,15 @@
 username: username
 password: password
+checkPeriod: "10" # interval between repo checks in seconds
+redisHost: "redis-headless"
+redisPort: "6379"
 
 replicaCount: 1
 
 image:
   repository: pmuzyka/githubwatcher
   pullPolicy: Always
-  tag: "0.2"
+  tag: "0.3"
 
 imagePullSecrets: []
 nameOverride: ""
